crates/ox_content_transform/src/pm/tests/snapshots/ox_content_transform__pm__tests__transform__group_attr_only_when_sync_enabled.snap
---
source: crates/ox_content_transform/src/pm/tests/transform.rs
expression: "format!(\"off:\\n{}\\n---\\non:\\n{}\", off.html, on.html)"
---
off:
<div class="ox-tabs-container"><div class="ox-tabs" data-group="0"><div class="ox-tabs-header"><input type="radio" name="ox-tabs-0" id="ox-tab-0-0" checked><label for="ox-tab-0-0">vp</label><input type="radio" name="ox-tabs-0" id="ox-tab-0-1"><label for="ox-tab-0-1">pnpm</label><input type="radio" name="ox-tabs-0" id="ox-tab-0-2"><label for="ox-tab-0-2">bun</label><input type="radio" name="ox-tabs-0" id="ox-tab-0-3"><label for="ox-tab-0-3">npm</label><input type="radio" name="ox-tabs-0" id="ox-tab-0-4"><label for="ox-tab-0-4">yarn</label></div><div class="ox-tab-panel" data-tab="0"><pre><code class="language-bash">vp install vite</code></pre></div><div class="ox-tab-panel" data-tab="1"><pre><code class="language-bash">pnpm add vite</code></pre></div><div class="ox-tab-panel" data-tab="2"><pre><code class="language-bash">bun add vite</code></pre></div><div class="ox-tab-panel" data-tab="3"><pre><code class="language-bash">npm i vite</code></pre></div><div class="ox-tab-panel" data-tab="4"><pre><code class="language-bash">yarn add vite</code></pre></div></div><noscript><div class="ox-tabs-fallback"><details open><summary>vp</summary><div class="ox-tabs-fallback-content"><pre><code class="language-bash">vp install vite</code></pre></div></details><details><summary>pnpm</summary><div class="ox-tabs-fallback-content"><pre><code class="language-bash">pnpm add vite</code></pre></div></details><details><summary>bun</summary><div class="ox-tabs-fallback-content"><pre><code class="language-bash">bun add vite</code></pre></div></details><details><summary>npm</summary><div class="ox-tabs-fallback-content"><pre><code class="language-bash">npm i vite</code></pre></div></details><details><summary>yarn</summary><div class="ox-tabs-fallback-content"><pre><code class="language-bash">yarn add vite</code></pre></div></details></div></noscript></div>
---
on:
<div class="ox-tabs-container"><div class="ox-tabs" data-group="0" data-ox-tab-group="pkg-manager"><div class="ox-tabs-header"><input type="radio" name="ox-tabs-0" id="ox-tab-0-0" checked><label for="ox-tab-0-0">vp</label><input type="radio" name="ox-tabs-0" id="ox-tab-0-1"><label for="ox-tab-0-1">pnpm</label><input type="radio" name="ox-tabs-0" id="ox-tab-0-2"><label for="ox-tab-0-2">bun</label><input type="radio" name="ox-tabs-0" id="ox-tab-0-3"><label for="ox-tab-0-3">npm</label><input type="radio" name="ox-tabs-0" id="ox-tab-0-4"><label for="ox-tab-0-4">yarn</label></div><div class="ox-tab-panel" data-tab="0"><pre><code class="language-bash">vp install vite</code></pre></div><div class="ox-tab-panel" data-tab="1"><pre><code class="language-bash">pnpm add vite</code></pre></div><div class="ox-tab-panel" data-tab="2"><pre><code class="language-bash">bun add vite</code></pre></div><div class="ox-tab-panel" data-tab="3"><pre><code class="language-bash">npm i vite</code></pre></div><div class="ox-tab-panel" data-tab="4"><pre><code class="language-bash">yarn add vite</code></pre></div></div><noscript><div class="ox-tabs-fallback"><details open><summary>vp</summary><div class="ox-tabs-fallback-content"><pre><code class="language-bash">vp install vite</code></pre></div></details><details><summary>pnpm</summary><div class="ox-tabs-fallback-content"><pre><code class="language-bash">pnpm add vite</code></pre></div></details><details><summary>bun</summary><div class="ox-tabs-fallback-content"><pre><code class="language-bash">bun add vite</code></pre></div></details><details><summary>npm</summary><div class="ox-tabs-fallback-content"><pre><code class="language-bash">npm i vite</code></pre></div></details><details><summary>yarn</summary><div class="ox-tabs-fallback-content"><pre><code class="language-bash">yarn add vite</code></pre></div></details></div></noscript></div>
