crates/ox_content_transform/src/pm/tests/snapshots/ox_content_transform__pm__tests__transform__numbers_multiple_groups_from_start.snap
---
source: crates/ox_content_transform/src/pm/tests/transform.rs
expression: result.html
---
<div class="ox-tabs-container"><div class="ox-tabs" data-group="3"><div class="ox-tabs-header"><input type="radio" name="ox-tabs-3" id="ox-tab-3-0" checked><label for="ox-tab-3-0">vp</label><input type="radio" name="ox-tabs-3" id="ox-tab-3-1"><label for="ox-tab-3-1">pnpm</label><input type="radio" name="ox-tabs-3" id="ox-tab-3-2"><label for="ox-tab-3-2">bun</label><input type="radio" name="ox-tabs-3" id="ox-tab-3-3"><label for="ox-tab-3-3">npm</label><input type="radio" name="ox-tabs-3" id="ox-tab-3-4"><label for="ox-tab-3-4">yarn</label></div><div class="ox-tab-panel" data-tab="0"><pre><code class="language-bash">vp install a</code></pre></div><div class="ox-tab-panel" data-tab="1"><pre><code class="language-bash">pnpm add a</code></pre></div><div class="ox-tab-panel" data-tab="2"><pre><code class="language-bash">bun add a</code></pre></div><div class="ox-tab-panel" data-tab="3"><pre><code class="language-bash">npm i a</code></pre></div><div class="ox-tab-panel" data-tab="4"><pre><code class="language-bash">yarn add a</code></pre></div></div><noscript><div class="ox-tabs-fallback"><details open><summary>vp</summary><div class="ox-tabs-fallback-content"><pre><code class="language-bash">vp install a</code></pre></div></details><details><summary>pnpm</summary><div class="ox-tabs-fallback-content"><pre><code class="language-bash">pnpm add a</code></pre></div></details><details><summary>bun</summary><div class="ox-tabs-fallback-content"><pre><code class="language-bash">bun add a</code></pre></div></details><details><summary>npm</summary><div class="ox-tabs-fallback-content"><pre><code class="language-bash">npm i a</code></pre></div></details><details><summary>yarn</summary><div class="ox-tabs-fallback-content"><pre><code class="language-bash">yarn add a</code></pre></div></details></div></noscript></div> mid <div class="ox-tabs-container"><div class="ox-tabs" data-group="4"><div class="ox-tabs-header"><input type="radio" name="ox-tabs-4" id="ox-tab-4-0" checked><label for="ox-tab-4-0">vp</label><input type="radio" name="ox-tabs-4" id="ox-tab-4-1"><label for="ox-tab-4-1">pnpm</label><input type="radio" name="ox-tabs-4" id="ox-tab-4-2"><label for="ox-tab-4-2">bun</label><input type="radio" name="ox-tabs-4" id="ox-tab-4-3"><label for="ox-tab-4-3">npm</label><input type="radio" name="ox-tabs-4" id="ox-tab-4-4"><label for="ox-tab-4-4">yarn</label></div><div class="ox-tab-panel" data-tab="0"><pre><code class="language-bash">vp install b</code></pre></div><div class="ox-tab-panel" data-tab="1"><pre><code class="language-bash">pnpm add b</code></pre></div><div class="ox-tab-panel" data-tab="2"><pre><code class="language-bash">bun add b</code></pre></div><div class="ox-tab-panel" data-tab="3"><pre><code class="language-bash">npm i b</code></pre></div><div class="ox-tab-panel" data-tab="4"><pre><code class="language-bash">yarn add b</code></pre></div></div><noscript><div class="ox-tabs-fallback"><details open><summary>vp</summary><div class="ox-tabs-fallback-content"><pre><code class="language-bash">vp install b</code></pre></div></details><details><summary>pnpm</summary><div class="ox-tabs-fallback-content"><pre><code class="language-bash">pnpm add b</code></pre></div></details><details><summary>bun</summary><div class="ox-tabs-fallback-content"><pre><code class="language-bash">bun add b</code></pre></div></details><details><summary>npm</summary><div class="ox-tabs-fallback-content"><pre><code class="language-bash">npm i b</code></pre></div></details><details><summary>yarn</summary><div class="ox-tabs-fallback-content"><pre><code class="language-bash">yarn add b</code></pre></div></details></div></noscript></div>
